--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,6 +21,7 @@
         <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
     </p>
 </div>
+<img src="/quan-short-nu-qsn6024-bee-tsn6290-cdt-2-yodyvn.webp">
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
